--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
   text-align: left;
-  font-family: Arial;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
   color: #333;
 }
