--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,3 +32,9 @@ body{
 .post{
   margin-left: 10px;
 }
+#footer{
+  background: #777;
+  color: white;
+  text-align: center;
+  padding: 0.5em;
+}
